BM- Fixed the navbar issues. Made the nav-wrap div contain everything to a fixed 900px length.

--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,12 @@ body{
  nav-main Bar
 ========================================================================== */
 
+#nav-wrap{
+	margin: 0 auto;
+    max-width:900px;
+    height:100%;
+}
+
 
 .navbar-xs .navbar-brand{ 
 	padding: 0px 12px;
